--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {},
   "scripts": {
-    "start": "node app.js"
+//    "start": "node app.js"
+    "start": "node veriapp.js"
+
   }
 }
